--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,6 +7,8 @@
     <li>
 <%= link_to task.id, task %>
 :
+<%= task.status %>
+&gt;
 <%= task.content %>
 </li>
 
@@ -14,4 +16,4 @@
 
 </ul>
 
-<%= link_to '新規タスクに投稿', new_task_path %>
+<%= link_to '新規タスクの投稿', new_task_path %>
