--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,7 +9,7 @@
         <ul>
             
             
-<% task.error.full_tasks.each do |tsk| %>
+<% task.errors.full_tasks.each do |tsk| %>
 
 
             <li>
